--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -25,14 +25,14 @@
     </div>
   </app-root>
 
-  <div id="unsupported" class="container" style="display: none;" >
-    <div class="alert alert-warning mt-4">
-      <h4 class="alert-heading">警告：</h4>
+  <div id="unsupported" class="container mx-auto" style="display: none;" >
+    <div class="bg-yellow-50 border border-yellow-200 text-yellow-800 rounded p-4 mt-4">
+      <h4 class="font-bold mb-2">警告：</h4>
       <p>检测到不支持的浏览器或者浏览器模式， 请按照下面的步骤操作重试：</p>
-      <ul>
-        <li><span class="text-success">推荐</span>使用最新版谷歌 Chrome 浏览器访问， <a class="alert-link" target="_blank" href="https://google.cn/chrome/">下载地址</a>；</li>
-        <li><span class="text-success">推荐</span>使用最新版微软 EDGE 浏览器访问， <a class="alert-link" target="_blank" href="https://www.microsoft.com/zh-cn/edge/">下载地址</a>；</li>
-        <li>如果您使用搜狗、 QQ、 360等其它浏览器， 请手工切换至 <a class="alert-link" target="_blank" href="https://www.baidu.com/s?wd=如何切换极速模式">极速模式</a>；</li>
+      <ul class="list-disc ml-5">
+        <li><span class="text-green-600">推荐</span>使用最新版谷歌 Chrome 浏览器访问， <a class="text-yellow-900 underline" target="_blank" href="https://google.cn/chrome/">下载地址</a>；</li>
+        <li><span class="text-green-600">推荐</span>使用最新版微软 EDGE 浏览器访问， <a class="text-yellow-900 underline" target="_blank" href="https://www.microsoft.com/zh-cn/edge/">下载地址</a>；</li>
+        <li>如果您使用搜狗、 QQ、 360等其它浏览器， 请手工切换至 <a class="text-yellow-900 underline" target="_blank" href="https://www.baidu.com/s?wd=如何切换极速模式">极速模式</a>；</li>
       </ul>
     </div>
   </div>
